# NetworkHealthAssistant

./: .gitignore  README.md  ai_bridge.py  config.yaml  gui_main.py  matplot_embed.py  nha_bridge.py  pyproject.toml  requirements.txt  styles.py  tabs_dashboard.py  tabs_devices.py  tabs_identify.py  tabs_settings.py  tabs_tasks.py  tabs_threats.py  tabs_wifi_survey.py
.github/workflows/: ci.yml  release.yml
docs/: index.md  ios.md  security.md  setup.md  troubleshooting.md  using.md
src/integrations/: deco.py  deco_api.py  deco_config.py
src/nha/: advice.py  ai_client.py  analyze.py  classify.py  cli.py  config.py  deco_mesh_diagnostics.py  diagnostics.py  logger.py  net_health.py  oui.py  registry.py  report.py  scanner.py  storage.py  utils.py  wifi_survey.py
src/server/: api.py
src/ui/: health_worker.py  help.py
tests/: gui_contract.py  smoke_tests.py
tools/: build_userguide.py  make_all.ps1
