[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "network-health-assistant-full"
version = "0.1.0"
description = "LAN scanner + risk advisor with a PyQt6 GUI (AI-ready)"
requires-python = ">=3.9"
authors = [{name="G. Rapson", email="info@gr-analysis.example"}]
readme = "README.md"
dependencies = ["PyQt6>=6.6"]

[tool.setuptools.packages.find]
where = ["src"]
